// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/App Header Default 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "lightcyan",
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <div
          className="title"
        >
          <img
            alt="Blood Bank"
            className="logoImage"
            src="blood-bank-zichron-Little-logo.svg"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/App Header Hamburger 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "lightcyan",
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 rightButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg>
              menu.svg
            </svg>
          </span>
        </button>
        <div
          className="title"
        >
          <img
            alt="Blood Bank"
            className="logoImage"
            src="blood-bank-zichron-Little-logo.svg"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/App Header Info Title 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "lightcyan",
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <div
          className="title infoTitle"
        >
          כותרת
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/App Header Secondary Title 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "lightcyan",
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <div
          className="title secondaryTitle"
        >
          כותרת
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/App Header Sticky Component 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "lightcyan",
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 rightButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg>
              chevron-right.svg
            </svg>
          </span>
        </button>
        <div
          className="title infoTitle"
        >
          ניהול תורים
        </div>
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 leftButton"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg>
              notifications.svg
            </svg>
          </span>
        </button>
      </div>
      <div
        className="stickyComponent"
      >
        <div
          style={
            Object {
              "padding": 10,
            }
          }
        >
          משהו דביק
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/App Header With Back 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "lightcyan",
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 rightButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg>
              chevron-right.svg
            </svg>
          </span>
        </button>
        <div
          className="title"
        >
          <img
            alt="Blood Bank"
            className="logoImage"
            src="blood-bank-zichron-Little-logo.svg"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/App Header With Notification 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "lightcyan",
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 rightButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg>
              chevron-right.svg
            </svg>
          </span>
        </button>
        <div
          className="title infoTitle"
        >
          ניהול תורים
        </div>
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 leftButton"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg>
              notifications.svg
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
